# nandemo-oshirase

./: .gitignore  .pre-commit-config.yaml  README.md  openapi.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: cd-dev.yml  cd.yml  ci.yml
src/nandemo_oshirase/: docs.html  lambda_function.py
tests/: test_batch.py  test_format.py  test_lambda_handler.py  test_parse_request.py  test_push.py  test_validate.py
tf/: example.tfvars  main.tf  variables.tf
tf/envs/dev/: example.tfvars  main.tf  outputs.tf  variables.tf
tf/envs/prod/: main.tf
tf/modules/: main.tf  outputs.tf  variables.tf
