[project]
name = "nandemo-oshirase"
version = "0.1.0"
description = "A simple notification app that sends messages to LINE"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=nandemo_oshirase --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["src/nandemo_oshirase"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
